@@ -1,5 +1,7 @@
 Sep 2, 2003
 
+  * FIXED: rdfe_retractall/[3,4] to properly update the journal.
+
   * FIXED: rdf_assert duplicate administration (crashes rdf_retractall on
     assertion failure).
 
